exponential backoff in case of error

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "dependencies": {
     "json-stringify-safe": "~5.0.0",
-    "level-sublevel": "~5.0.1"
+    "level-sublevel": "~5.0.1",
+    "backoff": "~2.3.0",
+    "xtend": "~2.0.6"
   },
   "devDependencies": {
     "level": "~0.14.0",
