--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "url": "https://github.com/pgte/level-jobs/issues"
   },
   "dependencies": {
-    "json-stringify-safe": "~5.0.0",
-    "level-sublevel": "~5.0.1",
     "backoff": "~2.3.0",
-    "xtend": "~2.0.6",
-    "level-hooks": "~4.4.4"
+    "json-stringify-safe": "~5.0.0",
+    "level-hooks": "~4.4.4",
+    "level-sublevel": "~5.0.1",
+    "level-write-stream": "^1.0.0",
+    "xtend": "~2.0.6"
   },
   "devDependencies": {
     "level": "~0.18.0",
